# gitlab-analytics

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  config.json  config.json.in
.github/workflows/: release.yml
src/: configuration.rs  main.rs  reports.rs  settings.rs  tools.rs
src/reports/: report.rs  review_lifetime_report.rs
