[package]
name = "gitlab-analytics"
version = "0.1.0"
authors = ["kizeev.ov <kizeev.ov@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = { git = "https://gitlab.kitware.com/kizeev.ov/rust-gitlab.git", branch = "fixed-supported-old-version" }
chrono = "0.4.19"
config = "0.11.0"
serde = "1.0.125"
serde_json = "1.0.64"
clap = "2.33.3"
